# core

./: Cargo.toml
deltachat-relay-bot/: Cargo.toml
deltachat-relay-bot/src/: main.rs
src/: chat.rs  constants.rs  lib.rs  message.rs  mimefactory.rs  receive_imf.rs  relay_bot.rs  securejoin.rs
