[package]
name = "deltachat-relay-bot"
version = "0.1.0"
license = "MPL-2.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
deltachat = { workspace = true, features = ["internals"] }
tokio = { workspace = true, features = ["fs", "rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-journald = "0.3"
[features]
default = ["vendored"]
vendored = ["deltachat/vendored"]
